--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-MONGO_URI="mongodb+srv://muddampoojitha43_db_user:KZFyKSIvAdeEimn2@cluster0.45iyk2l.mongodb.net/admin_panel?retryWrites=true&w=majority&appName=Cluster0"
-PORT=5000
-    
+MONGO_URL=mongodb+srv://muddampoojitha43_db_user:XylsJ2pzBsAZFJSW@cluster0.45iyk2l.mongodb.net/adminpanel
